Refactored services